--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<div style="--color1: {{color1}}; --color2: {{color2}}; --color3: {{color3}}">
+    <button (click)="cambiar()" >{{texto}}</button>
+    <router-outlet></router-outlet>
+</div>
+    
