--- a/app/src/app/components/login/login.component.css
+++ b/app/src/app/components/login/login.component.css
@@ -1,5 +1,5 @@
 .body{
-    background: #888;
+    background: var(--color1);
     width: 100%;
     min-height: 100vh;
     display: flex;
@@ -7,11 +7,18 @@
     justify-content: center;
     font-size: 25px;
 }
+.body h1{
+    color: #fff;
+    background: var(--color2);
+    padding: 20px;
+    border-radius: 7px;
+}
 .body form{
-    background: rgba(33, 14, 206, 0.712);
+    background: var(--color2);
     padding: 5%;
     margin-top: 5%;
     border-radius: 7px;
+    color: #fff;
 }
 .body form .form-block{
     width: 100%;
@@ -23,6 +30,11 @@
     padding: 5px;
     margin-top: 5px;
     font-size: 20px;
+    background: transparent;
+    color: #fff;
+    border: none;
+    outline: none;
+    border-bottom: solid var(--color3) .7px;
 }
 .body form button{
     outline: none;
@@ -38,7 +50,7 @@
     transition: all .5s;
 }
 .body form button:hover{
-    box-shadow: 0px 2px 10px rgba(255, 255, 255, 0.801),
-                -0px 0px 10px rgba(255, 255, 255, 0.829);
+    box-shadow: 0px 2px 10px var(--color3),
+                -0px 0px 10px var(--color3);
     transform: translateY(-3px);
 }
