--- a/app/src/app/components/login/login.component.html
+++ b/app/src/app/components/login/login.component.html
@@ -1,13 +1,13 @@
-<div class="body">
+<div class="body" style="--otro: {{cualquiera}}">
     <div>
         <h1>Maria Grande Repuestos</h1>
         <form class="form" [formGroup]="form">
             <div class="form-block">
-                <label for="usuario">Usuario</label>
+                <label for="usuario">Usuario:</label>
                 <input formControlName="user" type="text" id="usuario">
             </div>
             <div class="form-block">
-                <label for="password">Contraseña</label>
+                <label for="password">Contraseña:</label>
                 <input type="password" formControlName="password" id="password">
             </div>
             <div class="form-block">
