--- a/app/src/app/components/ventas/ventas.component.css
+++ b/app/src/app/components/ventas/ventas.component.css
@@ -32,6 +32,25 @@
     border-bottom: solid .7px var(--color1);
     padding: 5px;
 }
+.form-btn{
+    grid-column: 1/3;
+}
+.form-btn button, .buscador button{
+    width: 100%;
+    color: #fff;
+    background: #000;
+    padding: 10px 0px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+.buscador button{
+    width: max-content;
+    padding: 10px 5px;
+    background: var(--color2);
+    margin: 0px 10px;
+    justify-self: flex-end;
+}
 .body .productos .lista{
     background: #fff;
     width: 100%;
@@ -69,6 +88,15 @@
     justify-content: space-around;
     padding: 1% 5%;
     margin: 1% 0px;
+    position: relative;
+}
+.productos form .bloquear{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.178);
 }
 .productos form .form-block{
     width: 25%;
@@ -135,5 +163,11 @@ tr button{
 @media screen and (max-width: 1200px){
     .body .datos{
         width: 100%;
+    }
+}
+@media screen and (max-width: 480px){
+    .venta .detalles .productos form{
+        display: grid;
+        grid-template-columns: 50% 50%;
     }
 }
