--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div style="--color1: {{color1}}; --color2: {{color2}}; --color3: {{color3}}">
-    <button (click)="cambiar()" >{{texto}}</button>
+    <button (click)="cambiar()" ><i class="{{texto}}"></i></button>
     <router-outlet></router-outlet>
 </div>
     
