--- a/app/src/app/components/principal/principal.component.css
+++ b/app/src/app/components/principal/principal.component.css
@@ -64,4 +64,11 @@
         width: 100%;
         margin-top: 5%;
     }
+    .body .lateral button{
+        font-size: 16px;
+    }
 }
+/* @media screen and (max-width: 520px){
+
+} */
+
