--- a/app/src/app/components/ventas/ventas.component.css
+++ b/app/src/app/components/ventas/ventas.component.css
@@ -106,7 +106,14 @@
     outline: none;
     border-bottom: solid .7px var(--color1);
     padding: 10px;
-    margin: 0px 10px;
+    margin-right: 10px;
+    width: 100%;
+}
+.venta .detalles .productos form .btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 .venta .detalles .productos form button{
     background: var(--color2);
@@ -169,5 +176,14 @@ tr button{
     .venta .detalles .productos form{
         display: grid;
         grid-template-columns: 50% 50%;
+    }
+    .productos form .form-block{
+        width: 90%;
+    }
+    .lista h2, .lista h3{
+        font-size: 16px;
+    }
+    .lista th, td{
+        font-size: 10px;
     }
 }
