--- a/app/src/app/components/pagos/pagos.component.html
+++ b/app/src/app/components/pagos/pagos.component.html
@@ -1,1 +1,22 @@
-<p>pagos works!</p>
+<div class="body">
+    <div class="datos">
+        <h2>Pagar deuda</h2>
+        <div class="deudores">
+            <div class="buscador">
+                <label for="cliente">Cliente: </label>
+                <select #select name="Juan Perez" id="cliente" (click)="ver()">
+                    <option *ngFor="let item of clientes" value="{{item._id}}">{{item.name +' '+ item.lastname}}</option>
+                </select>
+                <div class="pago">
+                    <p>{{fecha }}</p>
+                    <h3>Cliente: {{seleccionado?.name}} {{seleccionado?.lastname}}</h3>
+                    <span *ngIf="seleccionado">
+                        <label for="pago">Paga: </label>  
+                        <input type="number">
+                    </span>
+                    <button>Ingresar pago</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
