--- a/app/src/app/components/principal/principal.component.html
+++ b/app/src/app/components/principal/principal.component.html
@@ -7,7 +7,7 @@
     <div class="seccion">
         <!-- <router-outlet></router-outlet> -->
         <app-deudores [clientes]="clientes" *ngIf="deudores"></app-deudores>
-        <app-pagos [clientes]="clientes" *ngIf="pagos"></app-pagos>
+        <app-pagos (atualizarDatos)="actualizar()" [clientes]="clientes" *ngIf="pagos"></app-pagos>
         <app-ventas (atualizarDatos)="actualizar()" [clientes]="clientes" *ngIf="ventas"></app-ventas>
     </div>
 </div>
