--- a/app/src/app/components/principal/principal.component.html
+++ b/app/src/app/components/principal/principal.component.html
@@ -11,3 +11,4 @@
         <app-ventas (atualizarDatos)="actualizar()" [clientes]="clientes" *ngIf="ventas"></app-ventas>
     </div>
 </div>
+<app-loader *ngIf="isLoading$ | async"></app-loader>
