--- a/app/src/app/components/deudores/deudores.component.css
+++ b/app/src/app/components/deudores/deudores.component.css
@@ -26,7 +26,7 @@
 .deudores li{
     list-style: none;
     border-bottom: solid .7px var(--color3);
-    padding-top: 10px;
+    padding: 10px 5px 0px;
     display: flex;
     justify-content: space-between;
 }
