--- a/app/src/app/components/deudores/deudores.component.html
+++ b/app/src/app/components/deudores/deudores.component.html
@@ -8,7 +8,7 @@
             </div>
             <li *ngFor="let item of clientes">
                 <p>{{item.name}}</p>
-                <p>{{item.deuda}}</p>
+                <p>{{item.deuda | currency}}</p>
             </li>
         </div>
     </div>
