--- a/app/src/app/components/deudores/cliente/cliente.component.css
+++ b/app/src/app/components/deudores/cliente/cliente.component.css
@@ -15,6 +15,7 @@
     margin: 10% 0px;
     padding: 20px 10px;
     position: relative;
+    height: 80vh;
 }
 .compras h2{
     padding: 10px 30px;
@@ -46,6 +47,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     width: 100%;
+    height: 90%;
 }
 .gral li{
     list-style: none;
@@ -77,5 +79,10 @@
 .compra, .pagos{
     padding: 0px 30px;
     height: 100%;
+    position: relative;
     overflow: hidden;
+}
+.compra .informe, .pagos .informe{
+    overflow-y: auto;
+    height: 90%;
 }
